package edu.fiuba.algo3.modelo;

public class NotEnoughSpecialsCardsError extends RuntimeException {
    public NotEnoughSpecialsCardsError(String message) {
        super(message);
    }
}