package edu.fiuba.algo3.modelo;

public class SectionTypeMismatchError extends RuntimeException {
    public SectionTypeMismatchError(String message) {
        super(message);
    }
} 