package edu.fiuba.algo3.modelo;

public class TheCardWasNotFound extends RuntimeException{
    public TheCardWasNotFound(String message){
        super(message);
    }
}
